asteria/core/tests/errors/elaboration_errors/variable_not_in_scope_hint_no_variables_in_scope.asteriacore
f : forall {a : Type}. a
  = \{a} -> x;;
